# py-cli-cn-dict

./: .gitignore  DEVELOPER_README.md  README.md  install_pqb_to_supabase_deps.sh  myclidict.py  pqb_to_supabase.py  pyproject.toml
data/: Pleco_OVD-Dict.pqb
